--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First practice course</title>
   </head>
-  <body  class="green-foreground   red-background  text-center">
-    <h1>Hello World</h1>
-    <a href="https://www.w3schools.com">This is a link</a>
-    <br />
-    <h1 style="color: brown">Firuz</h1>
-    <img src="image/html.jpg" width="250" height="300" alt="no image " />
-    <h1 style"text-align: center">Firuz</h1>
-    <h1 style="text-align: center">Centered Heading</h1>
-    <p style="text-align: center">Centered paragraph.</p>
+  <body  class="green-foreground   red-background">
+    <h1 style="font-size: 60px  ; text-align:center">Hello World</h1>
+    <i>
+    <h1 style="font-size:60px ; text-align:center">Safarzoda</h1>  
+    </i>
+    <h1 style="font-family: Verdana; color:darkblue;text-align:center">Firuz</h1>
+    <h1>
+      <a  href="https://www.w3schools.com" >This is a link</a><br>
+    </h1>
+    <img src="image/html.jpg" width="250" height="300" alt="no image "/>
+    <em>
+      <h1 style="text-align: center; font-size:60px">Centered Heading</h1>
+    <em>
+    <strong>
+      <h1 style=" font-size:60px;text-align:center">Centered paragraph.</h1>
+    </strong>
   </body>
 </html>
